--- a/src/pug/sections/_feedback.pug
+++ b/src/pug/sections/_feedback.pug
@@ -28,5 +28,5 @@ section.feedback
 						button.btn-primary(type="submit")
 							span Оставить заявку 
 							svg.svg-rarr
-								use(href='../img/sprite.svg#svg-rarr')
+								use(href='./img/sprite.svg#svg-rarr')
 						p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
