--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -11,7 +11,7 @@ section.team
 			a(href="#!").btn-primary.hide-sm 
 				span Все врачи
 				svg.svg-rarr
-					use(href='../img/sprite.svg#svg-rarr')
+					use(href='./img/sprite.svg#svg-rarr')
 		
 		.team-preview
 			//LEFT COLUMN
