--- a/src/pug/sections/before-after/_promo.pug
+++ b/src/pug/sections/before-after/_promo.pug
@@ -11,12 +11,12 @@
 		.promo-inner__grid.grid-two-column
 			.promo-inner__title.flex-col
 				h1.h1 Фото работ:<br>до и после
-				p Реальные результаты, которые вдохновляют
+				p.txt-24 Реальные результаты, которые вдохновляют
 				.promo-inner__btn
 					a(href="#!").btn-primary.sm-100
 						span Записаться на прием 
 						svg.svg-rarr
-							use(href='../img/sprite.svg#svg-rarr')
+							use(href='./img/sprite.svg#svg-rarr')
 			
 			
 			.rotate-img-group
