--- a/src/pug/sections/implantation/_review.pug
+++ b/src/pug/sections/implantation/_review.pug
@@ -1,7 +1,5 @@
-//TESTIMONIAL
 section.testimonial.has-absBtn
 	.container-special
-		
 		.left-decore-line
 			p.txt-primary 06/07
 			span.fake-line
@@ -14,12 +12,10 @@ section.testimonial.has-absBtn
 				svg.svg-rarr
 					use(href='./img/sprite.svg#svg-rarr')
 		
-		.testimonial-slider.swiper
+		.about-review.swiper
 			.swiper-wrapper
 				.swiper-slide.testimonial-box
 					.testimonial-card
-						.testimonial-card__img
-							img(src='./img/review/rev1.webp', srcset='./img/review/rev1@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
 						.testimonial-card__body
 							.testimonial-card__title
 								p Вера Павловна Твердохлебова
@@ -37,8 +33,7 @@ section.testimonial.has-absBtn
 				
 				.swiper-slide.testimonial-box
 					.testimonial-card
-						.testimonial-card__img
-							img(src='./img/review/rev2.webp', srcset='./img/review/rev2@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
+						
 						.testimonial-card__body
 							.testimonial-card__title
 								p Бердников Максим
@@ -56,8 +51,7 @@ section.testimonial.has-absBtn
 
 				.swiper-slide.testimonial-box
 					.testimonial-card
-						.testimonial-card__img
-							img(src='./img/review/rev3.webp', srcset='./img/review/rev3@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
+						
 						.testimonial-card__body
 							.testimonial-card__title
 								p Бердникова Лариса
@@ -72,7 +66,41 @@ section.testimonial.has-absBtn
 								span.rating-star
 								span.rating-star
 								span.rating-star.rating-star.disable
+				.swiper-slide.testimonial-box
+					.testimonial-card
+						
+						.testimonial-card__body
+							.testimonial-card__title
+								p Бердников Максим
+								span Генеральный директор OOO "Стройс+
+							
+							.testimonial-card__txt
+								p Посетив стоматологию, главный врач Карен Овсепович быстро разобрался в ситуации, поменял полностью конструкцию импланта, который меня беспокоил. Уже несколько лет не знаю проблем с этим зубом. Теперь у меня лечится вся семья, дети, сотрудники и друзья. Очень профессиональный и заботливый подход.
+							
+							.rating-block
+								span.rating-star
+								span.rating-star
+								span.rating-star
+								span.rating-star
+								span.rating-star.rating-star.disable
 
+				.swiper-slide.testimonial-box
+					.testimonial-card
+						
+						.testimonial-card__body
+							.testimonial-card__title
+								p Бердникова Лариса
+								span Генеральный директор OOO "Стройс+
+							
+							.testimonial-card__txt
+								p Я вспоминаю тот прекрасный момент, когда я впервые встретила Карена Овсеповича Даниеляна и он расположил меня с первой минуты. Самое главное, что он выслушал мою ключевую потребность и все мои страхи. Он выслушал это так, как-будто это единственная проблема в мире и она - моя!
+							
+							.rating-block
+								span.rating-star
+								span.rating-star
+								span.rating-star
+								span.rating-star
+								span.rating-star.rating-star.disable
 			.testimonial-slider-nav.flex
 				button.arrow-prev
 					svg.svg-rarr
