--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -71,3 +71,106 @@ html(lang="ru")
 								span Что такое отбеливание зубов и какие бывают виды?
 							a(href="").service-link
 								span Что такое отбеливание зубов и какие бывают виды?
+
+				br
+				.text-card
+					p.txt-primary Ближайшее время для записи на консультацию
+					p Курская
+					p Завтра, 02 декабря, в 12:30
+				
+
+				br
+				//card
+				.product-card.product-card--short
+					.product-card__top
+						.flex
+							.product-card__col
+								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
+							.product-card__col
+								.product-card__title Протез Акри-Фри
+								.time-element 30 минут 
+					
+					.product-card__price
+						p 99 500 &#8381;
+				//card
+				.product-card.product-card--short
+					.product-card__top
+						.flex
+							.product-card__col
+								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
+							.product-card__col
+								.product-card__title Протез Акри-Фри
+								.time-element 30 минут 
+					
+					.product-card__price
+						p 99 500 &#8381;
+				//card
+				.product-card.product-card--short
+					.product-card__top
+						.flex
+							.product-card__col
+								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
+							.product-card__col
+								.product-card__title Протез Акри-Фри
+								.time-element 30 минут 
+					
+					.product-card__price
+						p 99 500 &#8381;
+				br
+				.product-card
+					.product-card__top
+						.flex
+							.product-card__col
+								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
+							.product-card__col
+								.product-card__title Протез Акри-Фри
+								.time-element 30 минут 
+						p (с учетом анестезии, удаления зуба, наложения швов)
+					
+					.product-card__price
+						p 3 000 &#8381;
+
+				.product-card
+					.product-card__top
+						.flex
+							.product-card__col
+								img(src='../img/service/serv1.svg'  width='70' height='72' loading='lazy' alt='img')
+							.product-card__col
+								.product-card__title Протез Акри-Фри
+								.time-element 30 минут 
+						p Что входит в процедуру:
+						ol
+							li с учетом анестезии, удаления зуба, удаления зуба, 
+							li наложения швов
+							li наложения швов
+							li наложения швов
+					
+					.product-card__price
+						p 3 000 &#8381;
+						.txt-primary
+							span 8 300 ₽ / мес
+							span 0% / 1 год
+
+				.bonus-card.flex
+					img(src='../img/service/serv10.svg'  width='70' height='73' loading='lazy' alt='img')
+					.product-card__title В подарок идет зубной набор 
+				
+				.implant-card
+					.implant-card__top.flex
+						.implant-card__title
+							.implant-card__logo
+								img(src='../img/service/implant-logo.webp', srcset='../img/service/implant-logo@2x.webp 2x' width='141' height='37' loading='lazy' alt='img')
+							.title-20 ASTRA TECH
+							p Швеция
+						.implant-card__img
+							img(src='../img/service/implant.webp', srcset='../img/service/implant@2x.webp 2x' width='157' height='128' loading='lazy' alt='img')
+					
+					.implant-card__footer
+						.implant-card__footer-top
+							p.txt-primary Рассрочка:
+							.flex
+								p.txt-bold 8 300 ₽ / мес
+								p.txt-bold 0% / 1 год
+						
+						.implant-card__price
+							p 99 550 ₽
