--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -120,9 +120,12 @@
 		font-size: 70px;
 	}
 }
-
+.txt-bold{font-weight: 700;}
 .txt-white{
 	color: white!important;
+}
+.txt-primary{
+	color: #b9b1a6!important;
 }
 .header-block {
 	display: flex;
