--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,10 @@
 @use "blocks/_tabs";
 @use "sections/_before-after";
 @use "sections/_doctors.scss";
+@use "sections/_implantation.scss";
+@use "sections/_promo-special.scss";
+
+
 
 
 
