--- a/src/pug/sections/_service-poppulare.pug
+++ b/src/pug/sections/_service-poppulare.pug
@@ -11,7 +11,7 @@ section.poppular-service.has-absBtn
 			a(href="#!").btn-primary.abs-btn
 				span Посмотреть больше услуг
 				svg.svg-rarr
-					use(href='../img/sprite.svg#svg-rarr')
+					use(href='./img/sprite.svg#svg-rarr')
 		.service-cards.swiper
 			.swiper-wrapper
 				.swiper-slide.service-card
