--- a/src/pug/sections/doctors/_content.pug
+++ b/src/pug/sections/doctors/_content.pug
@@ -217,7 +217,7 @@ section.doctors.pb-110
 						button.btn-primary(type="submit")
 							span Оставить заявку 
 							svg.svg-rarr
-								use(href='../img/sprite.svg#svg-rarr')
+								use(href='./img/sprite.svg#svg-rarr')
 						p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
 
 		.doctors-wrapper
