--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -404,3 +404,273 @@ padding-block: 20px;
 		height: calc(100% - remy(80));
 	}
 }
+.text-card{
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 133%;
+	color: #2e3033;
+	padding: 20px;
+	border: 1px solid #b9b1a6;
+	background-color: #fff;
+	width: 100%;
+	max-width: 391px;
+	display: flex;
+	flex-direction: column;
+	row-gap:10px;
+	&>*+*{width: 100%;}
+	.txt-primary{
+		line-height: 122%;
+	}
+	@media(min-width: 768px) and (max-width: 1919px) {
+		font-size:remy(18);
+		padding: remy(20);
+		max-width: remy(391);
+	}
+}
+.product-card{
+	display: flex;
+	flex-direction: column;
+	font-size: 18px;
+	line-height: 133%;
+	color: #2e3033;
+	background-color: #fff;
+	padding: 20px;
+	width: 392px;
+	border: 1px solid #b9b1a6;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		font-size:remy(18);
+		padding: remy(20);
+	    width: remy(392);
+	}
+}
+.product-card__top{
+	width: 100%; flex-grow: 1;
+	padding-bottom: 40px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		padding-bottom:remy(40);
+		row-gap: remy(10);
+	}
+}
+.product-card .flex{
+	width: 100%;
+	column-gap:10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #b9b1a6;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		column-gap:remy(10);
+		padding-bottom: remy(10);
+	}
+}
+.product-card__title{
+	font-family: var(--second-family);
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 120%;
+	color: #2e3033;
+	&+*{margin-top: 8px;}
+	@media(min-width: 768px) and (max-width: 1919px) {
+		font-size: remy(20);
+	}
+}
+.product-card img{
+	width: 70px;
+	height: 70px;
+	flex-shrink: 0;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		width: remy(70);
+		height: remy(70);
+	}
+}
+.product-card__price{
+	flex-shrink: 0;
+	width: 100%;
+	border-top: 1px solid #b9b1a6;
+	padding-top: 20px;
+	
+	display: flex;
+	justify-content: center;
+	column-gap:14px;
+	font-weight: 700;
+	font-size: 38px;
+	line-height: 63%;
+	letter-spacing: -0.03em;
+	color: #2e3033;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		padding-top: remy(20);
+		font-size: remy(38);
+	}
+}
+.product-card__price .txt-primary{
+	span{
+		display: block;
+		font-weight: 700;
+		font-size: 10px;
+		line-height: 125%;
+		letter-spacing: -0.03em;
+		@media(min-width: 768px) and (max-width: 1919px) {
+			font-size: remy(10);
+		}
+	}
+}
+.implant-card{
+	border: 1px solid #b9b1a6;
+	padding: 20px;
+	width: 392px;
+	background-color: #fff;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 123%;
+	color: #2e3033;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		padding: remy(20);
+		width: remy(392);
+		font-size: remy(13);
+	}
+}
+.implant-card .title-20{
+	font-family: var(--second-family);
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 120%;
+	text-transform: uppercase;
+	color: #2e3033;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		font-size: remy(20);
+	}
+}
+.implant-card__top{
+	column-gap:12px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #b9b1a6;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		column-gap:remy(10);
+	    padding-bottom: remy(10);
+	}
+}
+.implant-card{
+	img{flex-shrink: 0;}
+	.title-20{
+		margin-bottom: 5px;
+		@media(min-width: 768px) and (max-width: 1919px) {
+			margin-bottom: remy(5);
+		}
+	}	
+	
+}
+.implant-card__logo{
+	margin-bottom: 20px;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		margin-bottom: remy(20);
+	}
+}
+.implant-card__footer{
+	padding-top: 16px;
+	display: flex;
+	flex-direction: column;
+	row-gap:4px;
+	font-size: 16px;
+	line-height:1;
+	color: #2e3033;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		row-gap:remy(14);
+	   font-size: remy(16);
+	}
+	.txt-bold{
+		line-height: 1.8;
+		letter-spacing: -0.03em;
+	}
+}
+.implant-card__price{
+	width: 100%;
+	padding-top: 10px;
+	display: flex;
+	justify-content: center;
+	column-gap:14px;
+	font-weight: 700;
+	font-size: 38px;
+	line-height: 63%;
+	letter-spacing: -0.03em;
+	color: #2e3033;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		padding-top: remy(10);
+		column-gap:remy(14);
+		font-size: remy(38)
+	}
+}
+.implant-card__footer-top .flex{
+	width: 100%;
+	justify-content: space-between;
+}
+.time-element{
+	position: relative;
+	display: flex;
+	align-items: center;
+	font-size: 16px;
+	line-height: 100%;
+	color: #42403e;
+	column-gap: 5px;
+	&:before{
+		content: '';
+		width: 13px;
+		height: 14px;
+		display: inline-block;
+		background-size: contain;
+		flex-shrink: 0;
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='13' height='14' viewBox='0 0 13 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M6.5 0.5C2.91569 0.5 0 3.41569 0 7C0 10.5843 2.91569 13.5 6.5 13.5C10.0843 13.5 13 10.5843 13 7C13 3.41569 10.0843 0.5 6.5 0.5ZM6.5 1.58333C9.49821 1.58333 11.9167 4.00179 11.9167 7C11.9167 9.99821 9.49821 12.4167 6.5 12.4167C3.50179 12.4167 1.08333 9.99821 1.08333 7C1.08333 4.00179 3.50179 1.58333 6.5 1.58333ZM5.95833 2.66667V7.54167H9.75V6.45833H7.04167V2.66667H5.95833Z' fill='%2342403E' /%3e%3c/svg%3e");
+	}
+	@media(min-width: 768px) and (max-width: 1919px) {
+		font-size: remy(16);
+		&:before{
+			
+			width: remy(13);
+			height: remy(14);
+		}
+	}
+}
+.product-card {
+	ol {
+		list-style-type: none; 
+		counter-reset: num;
+		
+		font-size: 18px;
+		@media(min-width: 768px) and (max-width: 1919px) {
+			font-size: remy(18);
+			
+		}
+	}
+	ol li {
+		position: relative;	
+		padding-left: 18px;
+		line-height: 1.33;
+		@media(min-width: 768px) and (max-width: 1919px) {
+			font-size: remy(18);
+			
+		}
+	}
+	ol li:before {
+		content: counter(num) '.'; 
+		counter-increment: num;
+		display: inline-block;	
+		position: absolute;
+		top: 0px;
+		left: 0;
+		font-size: 18px;
+		@media(min-width: 768px) and (max-width: 1919px) {
+			font-size: remy(18);
+			
+		}
+	}
+}
+
+.bonus-card.flex{
+	padding: 20px;
+	border: 1px solid #b9b1a6;
+	column-gap:10px;
+	@media(min-width: 768px) and (max-width: 1919px) {
+		padding: remy(20);
+		column-gap:remy(10);
+	}
+}
