--- a/src/scss/sections/_before-after.scss
+++ b/src/scss/sections/_before-after.scss
@@ -15,7 +15,7 @@
 		border: 2px solid #b9b1a6;
 		border-right: 0;
 		border-radius: 232px 0 0 232px;
-		width: 1240px;
+		width: 1300px;
 		height: 464px;
 		z-index: 1;
 		@media (max-width: 1919px) {
@@ -28,9 +28,28 @@
 	}
 	
 }
+.tabs__content-container{
+	padding-top: 80px;
+	.tabs-content__right{
+		padding-top: 70px;
+		flex-grow:1;
+	}
+	@media (max-width: 1919px) {
+		padding-top: remy(80);
+		.tabs-content__right{
+			padding-top: remy(70);
+		}
+	}
+	@media (max-width: 767px) {
+		padding-top: 0;
+		.tabs-content__right{
+			padding-top: 0;
+		}
+	}
+}
 .tabs-content-wrapper{
 	display: flex;
-	column-gap:100px;
+	column-gap:130px;
 	.tabs-content__left{
 		flex-shrink: 0;
 		position: relative;
@@ -41,7 +60,7 @@
 	}
 	@media (max-width: 767px) {
 	flex-direction: column-reverse;
-	row-gap: 30px;
+	row-gap: 40px;
 	padding-top: 40px;
 	&>*{width: 100%;}
 	}
@@ -110,12 +129,12 @@
 	}
 }
 .user-card{
-	padding: 25px;
-	padding-top: 0;
-	padding-bottom: 0;
+	// padding: 25px;
+	// padding-top: 0;
+	// padding-bottom: 0;
 	background-color: #fff;
 	row-gap:32px;
-	width: 380px;
+	width: 330px;
 	&__img{flex-shrink: 0;background-color: #B9B1A6;}
 	&__img img{
 		height: 280px;
@@ -138,9 +157,9 @@
 		}
 	}
 	@media (max-width: 1919px) {
-		padding: remy(25);
+		// padding: remy(25);
 		row-gap:remy(32);
-		width: remy(380);
+		width: remy(330);
 		&__body{row-gap: remy(22);}
 		&__img img{height: remy(280)}
 		.card__body-group{
@@ -153,10 +172,13 @@
 		}
 	}
 	@media (max-width: 767px) {
-		padding: 20px;
+		// padding: 20px;
 		row-gap:30px;
 		width: 100%;
 		max-width: 400px;
+		margin-left: auto;
+		margin-right: auto;
+		
 		&__body{row-gap: 20px;}
 		&__img img{height: 267px}
 		.card__body-group{
