--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,7 +12,7 @@ block content
 			a(href="about.html") О компании
 			a(href="before_after.html") До/после
 			a(href="doctors.html") Наши врачи
-			a(href="implantation.html") Наши врачи
+			a(href="implantation.html") Имплантация
 
 block variables
 	-var title = "NewLineDent";
