--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -11,31 +11,36 @@ section.steps
 		.steps-slider.swiper
 			.swiper-wrapper
 				.swiper-slide.step-card
-					span.step__num 01
+					.step-card__top.flex
+						span.step__num 01
 					.step__img
 						img(src='./img/steps/1.webp', srcset='./img/steps/1@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Сбор анамнеза
 				
 				.swiper-slide.step-card
-					span.step__num 02
+					.step-card__top.flex
+						span.step__num 02
 					.step__img
 						img(src='./img/steps/2.webp', srcset='./img/steps/2@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Осмотр
 				
 				.swiper-slide.step-card
-					span.step__num 03
+					.step-card__top.flex
+						span.step__num 03
 					.step__img
 						img(src='./img/steps/3.webp', srcset='./img/steps/3@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Фотопротокол
 				
 				.swiper-slide.step-card
-					span.step__num 04
+					.step-card__top.flex
+						span.step__num 04
 					.step__img
 						img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Компьютерная томография
 				
 				.swiper-slide.step-card
-					span.step__num 05
+					.step-card__top.flex
+						span.step__num 05
 					.step__img
 						img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title Составление плана лечение
