--- a/src/pug/sections/_steps-working.pug
+++ b/src/pug/sections/_steps-working.pug
@@ -1,4 +1,4 @@
-section.steps.working-sters
+section.steps.working-steps
 	.container-special
 		
 		.left-decore-line
@@ -10,7 +10,7 @@ section.steps.working-sters
 			h2.h2 Как пройдет наша<br>первая встреча?
 		.steps-slider.swiper
 			.swiper-wrapper
-				.swiper-slide.step-card
+				.swiper-slide.step-card.step-card--work
 					.step-card__top.flex
 						span.step__num 01
 						span.step-card__name Диагностика
@@ -20,29 +20,43 @@ section.steps.working-sters
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				.swiper-slide.step-card
-					span.step__num 02
+				.swiper-slide.step-card.step-card--work
+					.step-card__top.flex
+						span.step__num 02
+						span.step-card__name Диагностика
 					.step__img
 						img(src='./img/steps/2.webp', srcset='./img/steps/2@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Осмотр
+					.step__title Отбеливание
+					.step__desk
+						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				.swiper-slide.step-card
-					span.step__num 03
+				.swiper-slide.step-card.step-card--work
+					.step-card__top.flex
+						span.step__num 03
+						span.step-card__name Диагностика
 					.step__img
 						img(src='./img/steps/3.webp', srcset='./img/steps/3@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Фотопротокол
+					.step__title Реминерализация эмали
+					.step__desk
+						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				.swiper-slide.step-card
-					span.step__num 04
-					.step__img
-						img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Компьютерная томография
+				//- .swiper-slide.step-card.step-card--work
+				//- 	.step-card__top.flex
+				//- 		span.step__num 04
+				//- 		span.step-card__name Диагностика
+				//- 	.step__img
+				//- 		img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+				//- 	.step__desk
+				//- 		p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				.swiper-slide.step-card
-					span.step__num 05
-					.step__img
-						img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-					.step__title Составление плана лечение
+				//- .swiper-slide.step-card.step-card--work
+				//- 	.step-card__top.flex
+				//- 		span.step__num 05
+				//- 		span.step-card__name Диагностика
+				//- 	.step__img
+				//- 		img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+				//- 	.step__desk
+				//- 		p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 			
 			//slider nav
 			.steps-slider-nav
