--- a/src/pug/sections/implantation/_doctors.pug
+++ b/src/pug/sections/implantation/_doctors.pug
@@ -23,7 +23,7 @@ mixin doctorCrad(img, name,txt, num)
 							p Стоматология хирургическая. Действителен до 04.07.27
 				
 				
-				a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-slim-btn
+				a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-slim-btn.sm-100
 					p узнать о враче
 					span.btn-play
 
