--- a/src/pug/sections/_promo.pug
+++ b/src/pug/sections/_promo.pug
@@ -37,8 +37,8 @@
 	
 	//bottom row
 	.promo-bottom.flex
-		.container.mobile-swipe
-			.promo-bottom-content.flex
+		.container
+			.promo-bottom-content.flex.mobile-swipe
 				ul.flex
 					li цены под ключ
 					li возможна росрочка
