--- a/src/pug/sections/implantation/_promo.pug
+++ b/src/pug/sections/implantation/_promo.pug
@@ -88,8 +88,8 @@
 					
 	//bottom row
 	.promo-bottom.flex
-		.container.mobile-swipe
-			.promo-bottom-content.flex
+		.container
+			.promo-bottom-content.flex.mobile-swipe
 				ul.flex
 					li цены под ключ
 					li возможна росрочка
