--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -366,6 +366,7 @@ padding-block: 20px;
 .mobile-swipe{
 	@media (max-width: 767px) {
 		width: calc(50% + 50vw);
+		max-width: calc(50% + 50vw);
 		overflow: hidden;
 		overflow-x: auto;
 		scrollbar-width: none;
