--- a/src/pug/sections/implantation/_before-after.pug
+++ b/src/pug/sections/implantation/_before-after.pug
@@ -41,7 +41,7 @@ mixin tabsRightContent
 		a(href="#!").btn.btn--accent Назад
 		a(href="#!").btn-primary Перейти к следующему
 
-section.before-after
+section.before-after.before-after--inner
 	.container-special
 		.left-decore-line
 			p.txt-primary 02/07
@@ -57,31 +57,33 @@ section.before-after
 		
 
 		.tabs-content-wrapper
-			//LEFT CONTENT
-			.tabs-content__left
-				.user-card
-					.user-card__img
-						img(src='./img/user1.webp' width='329' height='280' loading='lazy' alt='img')
+			.before-after-wrapper
+				//LEFT CONTENT
+				.before-after__left
+					.user-card
+						.user-card__img
+							img(src='./img/user1.webp' width='329' height='280' loading='lazy' alt='img')
 
-					.user-card__body
-						.card__body-group
-							.title-24 Вера Павловна Твердохлебова
-							span.txt-bold Эстетическая тератия
-						.card__body-group
-							span.txt-bold Лечащий врач 
-							p.txt-16  Вера Павловна Твердохлебова
-						.card__body-group
-							.flex
-								span.clock-icon
-								span.clock-icon
-								span.clock-icon
-							.flex
-								span.coins-icon
-								span.coins-icon
-								span.coins-icon.disable
-					.before-after__buttons
-						a(href="#!").btn-accent.sm-100 Получить такую улыбку 
-			//RIGHT CONTENT
-			.tabs-content__right
-				+tabsRightContent
+						.user-card__body
+							.card__body-group
+								.title-24 Вера Павловна Твердохлебова
+								span.txt-bold Эстетическая тератия
+							.card__body-group
+								span.txt-bold Лечащий врач 
+								p.txt-16  Вера Павловна Твердохлебова
+							.card__body-group
+								.flex
+									span.clock-icon
+									span.clock-icon
+									span.clock-icon
+								.flex
+									span.coins-icon
+									span.coins-icon
+									span.coins-icon.disable
+						.before-after__buttons
+							a(href="#!").btn-accent.sm-100 Получить такую улыбку 
+				
+				//RIGHT CONTENT
+				.before-after__right
+					+tabsRightContent
 					
